# riiry

./: Cargo.toml  LICENSE.txt  README.md  default.nix
benches/: benchmarks.rs
src/: applications.rs  apps.rs  files.rs  filter.rs  lib.rs  main.rs  state.rs  worker.rs
src/ui/: app.rs  mod.rs  riiry.glade
