[package]
name = "riiry"
version = "0.1.3"
edition = "2018"
authors = ["Aaron Ash <aaron.ash@gmail.com>",
           "Chris West <github.com/FauxFaux>",
           "Aida <github.com/Autotonic>"]
license = "MIT"
repository = "https://github.com/ashyisme/riiry"
description = """
Riiry, a cross platform fuzzy launcher similar to rofi.
"""

[dependencies]
failure = "0.1"
gdk = "0.10.0"
glib = "0.7.0"
regex = "1"
sublime_fuzzy = "0.6.0"
walkdir = "2"
lazy_static = "1.3.0"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
simple_logger = "1.0.1"

[dependencies.gtk]
version = "0.6.0"
features = ["v3_22"]
