[package]
name = "riiry"
version = "0.1.8"
edition = "2018"
authors = ["Aaron Ash <aaron.ash@gmail.com>",
           "Chris West (https://github.com/FauxFaux)",
           "Aida (https://github.com/Autotonic)"]
license = "MIT"
repository = "https://github.com/ashyisme/riiry"
description = """
Riiry, a cross platform fuzzy launcher similar to rofi.
"""

[dependencies]
failure = "0.1"
gdk = "0.10.0"
glib = "0.7.0"
lazy_static = "1.3.0"
log = "0.4"
pretty_env_logger = "0.3"
regex = "1"
rff = "0.3.0"
rayon = "1.0.0"
sublime_fuzzy = "0.6.0"
walkdir = "2"

[dependencies.gtk]
version = "0.6.0"
features = ["v3_22"]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmarks"
harness = false
